# optemo

./: .gitignore  Gemfile  README  Rakefile  compute_counts_and_scores.py  deploy-to-staging.sh  features_report.html  push_to_production  push_to_staging  saveThem.txt  test.rb
app/: Distribution.c  MyNewTest.c  extconf.rb
app/controllers/: ajax_controller.rb  amazon_groups_controller.rb  application.rb  application_controller.rb  bbiframe_controller.rb  cameras_controller.rb  compare_controller.rb  content_controller.rb  demo_controller.rb  direct_comparison_controller.rb  link_controller.rb  login_controller.rb  printers_controller.rb  products_controller.rb  saveds_controller.rb  search_controller.rb  survey_controller.rb  surveys_controller.rb  welcomes_controller.rb
app/helpers/: ab_testing_helper.rb  amazon_groups_helper.rb  application_helper.rb  bbiframe_helper.rb  bestbuy_pagination_renderer.rb  cameras_helper.rb  compare_helper.rb  content_helper.rb  direct_comparison_helper.rb  printers_helper.rb  products_helper.rb
app/models/: ab_testing.rb  amazon_all.rb  amazon_cartridge.rb  amazon_group.rb  amazon_printer.rb  best_buy_api.rb  best_buy_camera.rb  best_buy_offering.rb  best_buy_phone.rb  best_buy_pilot_offering.rb  best_buy_printer.rb  best_buy_product.rb  bestbuy_scraped.rb  bin_spec.rb  binary.rb  boostexter_combined_rule.rb  boostexter_rule.rb  c_query.rb  caching.rb  caching_memcached.rb  camera.rb  camera_boostexter_combined_rule.rb  camera_cluster.rb  camera_features.rb  camera_node.rb  cartridge.rb  cat_spec.rb  categorical.rb  cluster.rb  cluster_properties.rb  comparable_set.rb  compatibility.rb  cont_spec.rb  continuous.rb  db_feature.rb  db_property.rb  distribution.rb  equivalence.rb  extended.rb  facet.rb  (+63 more)
cache/: amazon.html  amazon_Printer_us.html  amazon_ca_marketplace_printer.html  amazon_ca_printer.html  amazon_marketplace_printer.html  amazon_printer.html
cluster_labeling/: camera_cluster_boostexter.py  camera_terms.py  cluster_count_table.py  cluster_score_table.py  cluster_totalcount_table.py  cluster_totalcounts_table.py  cluster_value_for_word_table.py  django_settings.py  local_django_models.py  nh_chi_scorer.py  nh_labeler.py  nh_mi_scorer.py  optemo_django_models.py  pn_spellcheck.py  score_utils.py  spellchecker.pkl  stem_labels.py  stemmer.py  text_handling.py  usecases.py  utils.py  word_counts.py  words.py
cluster_labeling/boostexter_labels/: __init__.py  combined_rules.py  (+9 more)
config/: application.rb  asset_packages.yml  boot.rb  database.yml.rails2  databaseB.yml  deploy.rb  development.sphinx.conf  environment.rb  newrelic.ym1  products.yml  routes.rb  sphinx.yml  sunspot.yml.deploy.yml
db/: schema.rb
doc/: SQL-Query.txt  inline_styles.txt
features/: discovery_browsing.feature  filtering.feature  saving.feature
images/: Blue_Plus_Sign.psd  back arrow.psd  bb_more_specs.psd  bb_plus_de_fonctions.psd  bb_right_facing_carat.psd  bestbuy_compare.psd  bestbuy_empty_rating_bar.psd  bestbuy_magasinez.psd  bestbuy_shop_now.psd  bestbuy_shop_now_fr.psd  browsethenbuy.psd  checkmark.psd  close.psd  closepopup.psd  compare.psd  downarrow.psd  morelogo.psd  navigatorbox.psd  nbgroup.psd  plus.psd  popupclose.psd  quickview_footer_background.psd  quickview_horizontal_background.psd  refine_your_search_fr.psd  reset.psd  save_button.psd  see_all.psd  see_all_fr.psd  see_all_fr_white.psd  see_all_white.psd  sim_button.psd  slider.psd  slider_red.psd  sorting_arrow.psd  stars.psd  visual_filtering.ai  visual_filtering.psd  whylaser.ai  x.psd
lib/: GlobalDeclarations.rb  absolute_url_enabler.rb  amazon_ecs.rb  amazon_ecs_signature.rb  autocomplete_view_helpers.rb  bestbuy_ecs.rb  cartridge_helper.rb  compute_counts_and_scores.py  conversion_helper.rb  data_lib.rb  database_helper.rb  ecs.rb  etags.rb  helper_libs.rb  image_helper.rb  inline.rb  j_s_padding.rb  java_test_session.rb  migration_helper.rb  null_object.rb  old_amazon_helpers.rb  printer_page_helpers.rb  printer_test_asserts.rb  printer_test_mod.rb  scraping_helper.rb  test_session.rb  testing_lib.rb  uses.yml  validation_helper.rb  validation_libs.rb  validator_lib.rb  will_paginate_tweak.rb
lib/c_code/clusteringCode/drivermanager/: CMakeLists.txt  Makefile  cmake_install.cmake  driver_manager.cpp
lib/c_code/clusteringCodes/: CMakeLists.txt  FindMySQL.cmake
lib/c_code/clusteringCodes/codes/: CMakeLists.txt  connect.cpp  export  exportClusters.cpp  hCluster  hCluster-buggy  hCluster-jaguar  hClustering.cpp  hClustering.h  helpers.h  kmeans.h  kmeans_reza.h  leafClustering.h  postClustering.h  preProcessing.h  qmeasures_reza.h  querries.h  rep.h  saveClustered.h  smallNumberClustering.h  timer.rb
lib/c_code/clusteringCodes/codes/connect.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  depend.internal  depend.make  filtering.h
lib/c_code/clusteringCodes/codes/preProcessing/: generateOutput.h  parseInput.h  preClustering.h
lib/c_code/clusteringCodes/cppconn/: CMakeLists.txt  libmysqlcppconn.dylib  mysql_connection.cpp  mysql_connection.h  mysql_constructed_resultset.cpp  mysql_driver.cpp  mysql_driver.h  mysql_exception.cpp  mysql_metadata.cpp  mysql_metadata.h  mysql_prepared_statement.h  mysql_private_iface.h  mysql_ps_resultset.cpp  mysql_public_iface.h  mysql_res_wrapper.cpp  mysql_resultset.cpp  mysql_resultset.h  mysql_resultset_metadata.cpp  mysql_resultset_metadata.h  mysql_statement.cpp
lib/c_code/clusteringCodes/cppconn/dbciface/: driver.h  exception.h  metadata.h  prepared_statement.h  resultset.h  resultset_metadata.h  statement.h
log/: printer_test_log.txt  slider_test_log.txt
nimanotes/: accessing-objects.rb  accessing_objects.rb  cluster-hierarchy-bug.rb  cluster-internal-labeling-may-be-pointless  implementation-plan  missing-cameras-bug.rb  nh_cluster_labeler.rb
public/: 404.html  duplicates.js  financial_model.xls  loader.js  optemo_embedder.js  socket.html  xd_receiver.html
test/: factories.rb  server_test.txt  sunspot_autocomplete_test.rb  test_helper.rb  test_helper.rb.rails2  testing_checklist.txt
(+1388 files in other folders)
